--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -97,7 +97,8 @@
   }
 }
 
-.visually-hidden {
+.visually-hidden,
+.sr-only {
   position: absolute;
   width: 1px;
   height: 1px;
